--- a/main.tex
+++ b/main.tex
@@ -450,4 +450,121 @@ $\rightarrow$ Цикл коммуникации (Шаги):
 	\item Декодирование обратной связи, получение информации.
 	\item Улучшайте вашу коммуникацию. 
 \end{enumerate}
+
+\medskip
+$\ast$  Конгруэнтность в коммуникации - совпадение ваших мыслей, слов, невербальных проявлений и действий.
+
+\medskip
+$\ast$ Зеркальные нейроны - нейроны головного мозга, которые возбуждаются как при выполнении определенного действия, так и при наблюдении за выполнением этого действия другим человеком.
+
+\medskip
+Виды коммуникации:
+\begin{itemize}
+	\item Вербальное (устная, письменная речь).
+	\item Невербальное (мимика, жесты, позы, интонация, походка, взгляд).
+\end{itemize}
+\medskip 
+Слушание:
+\begin{itemize}
+	\item Активное (попытки побудить партнера к разговору, точно воспринять сказанное партнером, убедиться в точности восприятия, удержать партнера в ходе данной темы, не давая ему уйти в сторону).
+	\item Пассивное (терпеливое ожидание того, чтобы партнер заговорил, отвлечение внимания на что-либо другое при сохрании маски внимания, ожидание, пока партнер вернется к теме разговора).
+\end{itemize}
+
+\medskip 
+$\rightarrow$ Техники, способствующие пониманию:
+\begin{itemize}
+	\item Вербализация через повторение.
+	\item Вербализации через перефразирование.
+	\item Вербализация через интерпритацию и развитие идеи.
+\end{itemize}
+
+\bigskip 
+$\rightarrow$ Типичные ошибки вербализации и способы их преодоления:
+\begin{itemize}
+	\item безапелляционность (констатация правильности вместо проверки ясного понимания).
+	\item навязчивое повторение (диалог становится односторонним, другой человек не ощущает вашего вклада в разговор).
+	\item ложная интерпретация (неточное предположение о намерениях, мыслях или чувствах другого человека).
+	\item слишком точная интерпретация (лучше говорить в форме уточняющего вопроса или пробной гипотезы).
+\end{itemize}
+
+\bigskip
+$\rightarrow$ {\large Стили коммуникации}:
+	 
+\bigskip
+\begin{minipage}{0.45\textwidth}
+		{\large Прямой}
+	
+	\smallskip
+	$\circ$ Прямолинеен в намерениях
+	
+	$\circ$ Возможна категоричность
+	
+	$\circ$ Часто использует местоимение <<Я>>
+\end{minipage}
+\hfill
+\begin{minipage}{0.45\textwidth}
+		{\large Непрямой}
+		
+	\smallskip
+	$\circ$ Немерения коммуникации скрыто
+	
+	$\circ$ Использование неопределенных слов
+	
+	$\circ$ Редко использует местоимение <<Я>>
+\end{minipage}
+
+\bigskip
+\begin{minipage}{0.45\textwidth}
+	{\large Настойчивый}
+	
+	\smallskip
+	$\circ$ Лидирует в коммуникации, начинает говорить первым
+	
+	$\circ$ Перебивает, может быть грубым
+	
+	$\circ$ Часто выражает несогласие
+\end{minipage}
+\hfill
+\begin{minipage}{0.45\textwidth}
+	{\large Аффилятивный}
+	
+	\smallskip
+	$\circ$ Нередко ведом в общении
+	
+	$\circ$ Хороший слушатель
+	
+	$\circ$ Ищет точки соприкосновения
+\end{minipage}
+
+\bigskip
+\begin{minipage}{0.45\textwidth}
+	{\large Сжатый}
+	
+	\smallskip
+	$\circ$ Только необходимые детали
+	
+	$\circ$ Использует простые предложения
+	
+	$\circ$ Приводит мало примеров
+\end{minipage}
+\hfill
+\begin{minipage}{0.45\textwidth}
+	{\large Вычурный}
+	
+	\smallskip
+	$\circ$ Говорит предложениями с большим количеством оборотов
+	
+	$\circ$ Богатая речь (большой лексикон)
+	
+	$\circ$ Ищет точки соприкосновения
+\end{minipage}
+
+\bigskip
+$\rightarrow$ Как использовать стили?
+\begin{itemize}
+	\item Важно понимать, какой стиль у вас.
+	\item Необходимо наблюдать за собеседником и определять какой стиль свойственен ему, чтобы вам под него подстроиться.
+	\item Адаптируйте свой стиль, если является коммуникатором.
+	\item Учитывайте особенности стиля коммуникации при интерпретации сообщения.
+\end{itemize}
 \end{document}
