--- a/main.tex
+++ b/main.tex
@@ -1,18 +1,22 @@
 \documentclass[12pt,a4paper]{report}
 
 \usepackage{setspace, graphicx, fancyhdr, rotating, color}
+\usepackage{amsmath, amsfonts}
 \usepackage[margin=2cm]{geometry}
+
 \usepackage{tikz}
 
 \usepackage[utf8]{inputenc}
 \usepackage[russian]{babel}
 \usepackage{setspace}
-\setlength{\parindent}{0em}
-%\setlength{\parskip}{0.5em}
+
+\usepackage{comment}
+
 \pagestyle{fancy}
 \setcounter{tocdepth}{3}
 
-\usepackage{comment}
+\setlength{\parindent}{0em}
+%\setlength{\parskip}{0.5em}
 
 \begin{document}
 	
@@ -48,11 +52,11 @@
 \newpage
 \setcounter{page}{1}
 \section*{Урок 1. Работа в команде.}
-$\ast$ Soft Skills - что-то, что помогает в профессии вне зависимости от специальности
+$\ast$ Soft Skills -- что-то, что помогает в профессии вне зависимости от специальности
  (коммуникация, коммандообразование, уменить представить себя и т.д).
 
 \medskip
-$\ast$ Hard Skills - то, что относится к специальности (знание языков, математика, физика $\dots$)
+$\ast$ Hard Skills -- то, что относится к специальности (знание языков, математика, физика $\dots$)
 
 \medskip\medskip
 STEM - Science Technology Engeneering Mathematics
@@ -106,7 +110,7 @@ $\bullet$ Лучше не давать слишком сложные или пр
 	\end{minipage}
 
 \medskip
-$\ast$ Ценности - идеальное значение и смысл вещей и явлений, происходящих в жизни человека.
+$\ast$ Ценности -- идеальное значение и смысл вещей и явлений, происходящих в жизни человека.
 
 \medskip
 Мотивация коллег:
@@ -134,7 +138,7 @@ $\ast$ Ценности - идеальное значение и смысл ве
 \end{enumerate}
 
 \medskip
-$\bullet$ Групповые эффекты - закономерности, характерные для поведения человека в 
+$\bullet$ Групповые эффекты -- закономерности, характерные для поведения человека в 
 группе. Свойственны большим и малым группам, но сила и характер их протекания всегда 
 различны, так как поведение в каждой группе уникально и обусловлено множеством факторов.
 
@@ -142,10 +146,10 @@ $\bullet$ Групповые эффекты - закономерности, ха
 $\diamond$ Норман Триплетт: обнаружил особенности реакции человека на присутствие других людей.
 
 \medskip
-$\ast$ Социальная фасилитация - простые и примитивные действия лучше выполняются в присутствии других людей.
+$\ast$ Социальная фасилитация -- простые и примитивные действия лучше выполняются в присутствии других людей.
 
 \medskip 
-$\ast$ Социальная ингибиция - трудные задачи в присутствии других людей делаются хуже.
+$\ast$ Социальная ингибиция -- трудные задачи в присутствии других людей делаются хуже.
 
 \medskip
 $\rightarrow$ Советы:
@@ -180,7 +184,7 @@ $\rightarrow$ Как преодолеть эффект группомыслия:
 \end{itemize}
 
 \bigskip
-$\diamond$ Эффект комформизма - категорическое мнение большинства цленов группы относительно какого-либо вопроса приводит к узменению поведения остальных членов группы, даже если они считают данное мнение ошибочным.
+$\diamond$ Эффект комформизма -- категорическое мнение большинства цленов группы относительно какого-либо вопроса приводит к узменению поведения остальных членов группы, даже если они считают данное мнение ошибочным.
 
 \newpage
 \medskip 
@@ -205,12 +209,14 @@ $\rightarrow$ Решения:
 \end{itemize}
 
 \bigskip
-$\diamond$  Эффект синергии - продукт командной работы больше суммы индивидуальных каждого.
+$\diamond$  Эффект синергии -- продукт командной работы больше суммы индивидуальных каждого.
 
-\bigskip\smallskip 
-$\ast$ Фрилансер - нанимается на разовые или краткосрочные задачи.
-\medspace
-$\ast$ Удаленный сотрудник - человек, который нацелен на сотрудничество с компанией в течение долгого времени.
+\bigskip 
+$\ast$ Фрилансер -- нанимается на разовые или краткосрочные задачи.
+
+
+\medskip
+$\ast$ Удаленный сотрудник -- человек, который нацелен на сотрудничество с компанией в течение долгого времени.
 
 \bigskip 
 $\rightarrow$ Предпосылки перехода на удаленный формат:
@@ -329,10 +335,10 @@ $\rightarrow$ Выводы:
 \end{enumerate}
 
 \bigskip
-$\ast$ Социальная группа - устойчивая совокупность людей, которая имеет отличные, только ей присущие признаки.
+$\ast$ Социальная группа -- устойчивая совокупность людей, которая имеет отличные, только ей присущие признаки.
 
 \medskip 
-$\ast$ Малая социальная группа - группа непосредственно контакцирующих индивидов, объединенных общими интересами, целями и групповыми нормами поведения.
+$\ast$ Малая социальная группа -- группа непосредственно контакцирующих индивидов, объединенных общими интересами, целями и групповыми нормами поведения.
 
 \bigskip 
 $\diamond$ Брюс Такман "Стадии развития команды".
@@ -438,7 +444,7 @@ $\bullet$ Распад:
 \end{enumerate}
 
 \section*{Урок 3. Цикл коммуникации}
-$\ast$ Реципиент - тот, кто принимает информацию.
+$\ast$ Реципиент -- тот, кто принимает информацию.
 
 \bigskip
 $\rightarrow$ Цикл коммуникации (Шаги):
@@ -452,10 +458,10 @@ $\rightarrow$ Цикл коммуникации (Шаги):
 \end{enumerate}
 
 \medskip
-$\ast$  Конгруэнтность в коммуникации - совпадение ваших мыслей, слов, невербальных проявлений и действий.
+$\ast$  Конгруэнтность в коммуникации -- совпадение ваших мыслей, слов, невербальных проявлений и действий.
 
 \medskip
-$\ast$ Зеркальные нейроны - нейроны головного мозга, которые возбуждаются как при выполнении определенного действия, так и при наблюдении за выполнением этого действия другим человеком.
+$\ast$ Зеркальные нейроны -- нейроны головного мозга, которые возбуждаются как при выполнении определенного действия, так и при наблюдении за выполнением этого действия другим человеком.
 
 \medskip
 Виды коммуникации:
@@ -566,5 +572,80 @@ $\rightarrow$ Как использовать стили?
 	\item Необходимо наблюдать за собеседником и определять какой стиль свойственен ему, чтобы вам под него подстроиться.
 	\item Адаптируйте свой стиль, если является коммуникатором.
 	\item Учитывайте особенности стиля коммуникации при интерпретации сообщения.
+\end{itemize}
+
+\newpage
+\section*{Урок 4. Самопрезентация}
+$\ast$ Нетворкинг -- социальная и профессиональная деятельность, направленная на то, чтобы с помощью друзей и знакомых эффективнее решать различные задачи. (создание вокруг себя круга различных людей, умение поддерживать взаимоотношение так, чтобы можно было к ним всегда обратиться)
+
+\medskip
+$\bullet$ Нетворкинг -- взаимовыгодный процесс.
+
+\bigskip
+Правила нетворкинга:
+\begin{itemize}
+	\item Будьте открыты и доброжелательными.
+	\item Запаситесь визитными картами.
+	\item Уберите гаджеты в карман.
+	\item Активно знакомьтесь.
+	\item Подготовьте коротную самопрезентацию. <<Презентация для лифта - Elevator speech>>
+	\item Сохраняйте формат диалога.
+	\item Поддерживайте знакомства, а также обменяйтесь контактами и назначьте встречу.
+\end{itemize}
+
+\smallskip 
+$\bullet$ Составьте несколько коротких самопрезентаций для знакомства.
+
+\bigskip
+$\diamond$ Сетевой нетворкинг: 
+
+\smallskip
+$\ast$ Теория шести рукопожатий -- социологическая теория, согласно которой любые два человека на Земле разделены не более чем пятью уровнями общих знакомых.
+
+
+\subsection*{Письменные коммуникации}
+$\bullet$ То, как вы пишите, влияет на ваши отношения людьми.
+
+\bigskip
+$\rightarrow$ Что вызывает раздражение в переписке?
+\begin{enumerate}
+	\item Небрежность (опечатки, ошибки, неверный адресат).
+	\item Панибратство - не спешить переходить на <<ты>>.
+	\item Некорректный тон письма. (задавайте себе вопрос: <<Как бы я разговаривал с этим человек при реальном общении?>>).
+	\item Клише и отстутствие <<заботы>> о читателе.
+	\item Спешка и срочность.
+	\item Неверный выбор платформы для коммуникации (уточняйте удобный для человека способ и время для общения, уважайте личные границы).
+\end{enumerate}
+
+$\bullet$ Человеку не стоит писать на мессенджеры, в случае деловой переписки, или если переходите, то это должно быть обговорено. Также не нужно тревожить его в неудобное время.
+
+\newpage
+\medskip
+$\rightarrow$ Забота о читателе:
+\begin{itemize}
+	\item Сформулируйте цель вашего письма.
+	\item Обозначьте тему максимально корректно.
+	\item Структурируйте ваши письма.
+	\item Подготовьте дополнительные материалы для лучшего понимания.
+	\item Не перегружайте адресата.
+	\item Указывайте свои контактные данные, чтобы с вами можно было связаться.
+\end{itemize}
+
+\medskip 
+$\rightarrow$ Что важно еще помнить?
+\begin{enumerate}
+	\item Выбирайте подходящий адрес электронной почты.
+	\item Используйте смайлики с аккуратностью.
+	\item Избегайте большого количества одинаковых знаков и написание капслоком.
+	\item Обращайтесь к читателю по имени.
+	\item Благодарите.
+	\item Не пишите на эмоциях.
+\end{enumerate}
+
+\bigskip 
+Два простых правила: 
+\begin{itemize}
+	\item[\checkmark] Не пишите то, что нельзя переслать. 
+	\item[\checkmark] Не пишите то, что было бы стыдно увидеть на первой полосе Wall Street Journal.
 \end{itemize}
 \end{document}
