added lab7 prog, KuK conspect

--- a/КиК. Конспект/main.tex
+++ b/КиК. Конспект/main.tex
@@ -845,4 +845,313 @@ $\rightarrow$ Вредные привычки:
 	\item[\checkmark] Приносите своевременные извинения.
 	\item[\checkmark] Благодарите своих коллег.
 \end{itemize}
+
+\medskip  
+\section*{Урок 7. Ведение переговоров.}
+$\ast$ Переговоры -- этичный способ принятия решений, который требует добровольного согласия, гарантирует отстутствие принуждения в отношении любой из сторон, позволяет сторонам формировать взаимоотношения в процессе реализации достигнутого ими соглашения.
+
+\subsection*{Стратегии поведения в переговорах.}
+\begin{enumerate}
+	\item Стратения соперничества.
+	
+	\begin{itemize}
+		\item давление на оппонента любыми способами.
+		\item провокация оппонента на совершение ошибок и непродуманных шагов.
+		\item желание одержать верх любой ценой.
+		\item поисх единственно верного варианта.
+	\end{itemize}
+
+	\item Стратегия приспособления.
+	
+	\begin{itemize}
+		\item согласие с требованиями оппонента.
+		\item готовность нести потери.
+		\item отстутствие претензии на победу и сопротивление.
+		\item лесть, потакание оппоненту.
+	\end{itemize}
+
+	\item Стратегия избегания.
+	\begin{itemize}
+		\item уход от общения.
+		\item игнорирование оппонента.
+		\item отрицание фактов.
+		\item замедление в принятии решения.
+		\item страх поражения.
+	\end{itemize}
+
+	\item Стратегия сотрудничества.
+	\begin{itemize}
+		\item открытое обсуждение.
+		\item уважение к другой стороне.
+		\item выработка различных решений.
+		\item замедление в принятии решений.
+		\item анализ интересов оппонента.
+		\item ориентация на взаимовыгодный результат.
+	\end{itemize}
+
+	\item Стратегия компромисса.
+	\begin{itemize}
+		\item ориентация на равенство позиций.
+		\item обмен вариантами решений.
+		\item поиск среднего решения.
+	\end{itemize}
+\end{enumerate}
+
+\bigskip
+$\diamond$ Метод принципиальных переговоров.
+
+\medskip
+$\rightarrow$ Переговоры должны:
+\begin{itemize}
+	\item Привести к разумному соглашению.
+	\item Улучшить отношение между участниками.
+\end{itemize}
+
+\medskip 
+$\rightarrow$ Базовые принципы:
+\begin{enumerate}
+	\item Отделять людей от проблемы (разграничение отношения с оппонентом и проблемы).
+	\begin{itemize}
+		\item Не обвиняйте другого человека.
+		\item Ставьте себя на место другого человека.
+		\item Обсуждайте восприятие друг друга.
+		\item Слушайте активно.
+		\item Соотнесите ваши предложения с ценностями другой стороны.
+		\item Будьте внимательны к эмоциям.
+		\item Давайте возможность другой стороне выпустить пар.
+		\item Не реагируйте ответной агрессией на эмоциональные вспышки.
+	\end{itemize}
+	\item Учитывать интересы, а не позиции (позиция - требование; интерес - потребность, скрывающаяся за интересом).
+	\begin{itemize}
+		\item Говорите об интересах открыто и конкретно.
+		\item Наиболее мощные интересы - это основные человеческие потребности.
+		\item Делайте свои интересы понятными и обоснованными.
+		\item Смотрите в будущее.
+		\item Будьте твердыми в отношении проблемы и мягкими с людьми.
+	\end{itemize}
+	\item Искать альтернативы, взаимовыгодные варианты. (Переговоры как мозговой штурм.)
+	\begin{itemize}
+		\item Отделите процесс изобретения решений от их оценки.
+		\item Обсуждайте большое количество вариантов, проявляйте креативность.
+		\item Не останавливайтесь на одном решении.
+		\item Предлагайте варианты, привлекательные не только для вас, но и для других участников переговоров.
+		\item Делайте решения простыми и понятными.
+		\item Заранее продумайте план <<Б>>.
+	\end{itemize}
+	\item Использовать объективные критерии (порядок и традиции, рыночная стоимость, справедливость, эффективность, безопасность, решение авторитетного лица).
+	\begin{itemize}
+		\item Ищите критерии совместно.
+		\item Прислушивайтесь к доводам другой стороны.
+		\item Находите объективный конценсус между разными критериями.
+		\item Трезво оценивайте применимость стандартов.
+		\item Не давите, а убеждайте.
+		\item Твердо стойте на критерии, но будьте гибкими в обсуждении.
+		\item Привлекайте третье лицо для помощи в переговорах, если они зашли в тупик.
+	\end{itemize}
+\end{enumerate}
+
+\subsection*{Эмоции в переговорах.}
+$\ast$ Туннельное мышление -- сужение фокуса внимания до собственнных эмоций, однобоких решений, концентрация на негативных моментах.
+
+\medskip
+$\bullet$ Сильные эмоции - всегда неудовлетворенные потребности.
+
+\bigskip
+$\rightarrow$ Потребности:
+\begin{enumerate}
+	\item Потребность в положительной оценке. 
+	
+	\medskip
+	$\diamond$ Игнорируют, когда меня недооценивают.
+	
+	Эмоции:
+	
+	$\circ$ гнев~~
+	$\circ$ раздражение~~
+	$\circ$ ярость~~
+	$\circ$ негодование~~
+	
+	Если это происходит, то я склонен реагировать отрицательно.
+	
+	\bigskip
+	$\diamond$ Потребность удовлетворена, когда меня оценили по достоинству.
+	
+	Эмоции:
+		
+	$\circ$ энтузиазм~~
+	$\circ$ радость~~
+	$\circ$ восторг~~
+	$\circ$ ликование~~
+	
+	Если это происходит, то я склонен к сотрудничеству.
+	
+	\smallskip
+	\begin{itemize}
+		\item Оценить - не значит уступить.
+		\item Слушайте и пытайтесь понять скрытый смысл.
+		\item Ищите ценность в мяслях и действиях других людей.
+		\item Выражайте согласие словами.
+		\item Помогайте найти ценность в ваших идеях.
+	\end{itemize}
+
+	\smallskip
+	\item Потребность в аффилиации (в связи с другим человеком или коллективом).
+	
+	\medskip
+	$\diamond$ Игнорируют, когда меня воспринимают как врага.
+	
+	Эмоции:
+	
+	$\circ$ отвращение~~
+	$\circ$ обида~~
+	$\circ$ подавленность~~
+	$\circ$ презрение~~
+	
+	Если это происходит, то я склонен реагировать отрицательно.
+	
+	\bigskip
+	$\diamond$ Потребность удовлетворена, когда ко мне относятся как к сотруднику.
+	
+	Эмоции:
+	
+	$\circ$ преданность~~
+	$\circ$ оптимизм~~
+	$\circ$ забота~~
+	$\circ$ сострадание~~
+	
+	Если это происходит, то я склонен работать вместе с другими.
+	
+	\smallskip
+	\begin{itemize}
+		\item Ищите общие черты.
+		\item Избегайте доминирования.
+		\item Подчеркивайте общность проблемы.
+		\item Планируйте совместные действия.
+	\end{itemize}
+
+	\smallskip
+	\item Потребность в автономии (желании самому принимать решения).
+	
+	\medskip
+	$\diamond$ Игнорируют, когда нарушают мою автономию.
+	
+	Эмоции:
+	
+	$\circ$ досада~~
+	$\circ$ ненависть~~
+	$\circ$ злоба~~
+	$\circ$ конфуз~~
+	
+	Если это происходит, то я склонен уйти в себя.
+	
+	\bigskip
+	$\diamond$ Потребность удовлетворена, когда всеми признана моя свобода принимать решения.
+	
+	Эмоции:
+	
+	$\circ$ восторг~~
+	$\circ$ гордость~~
+	$\circ$ безупречность~~
+	$\circ$ смелость~~
+	
+	Если это происходит, то я склонен творить.
+	
+	\smallskip
+	\begin{itemize}
+		\item Проводите совместный мозговорй штурм.
+		\item Не навязывайте свои идеи.
+		\item Консультируйтесь перед принятием решений.
+		\item Расширяйте свою автономию.
+	\end{itemize}
+
+	\smallskip
+	\item Потребность в признании статуса.
+	
+	\medskip
+	$\diamond$ Игнорируют, когда принижают мой статус.
+	
+	Эмоции:
+	
+	$\circ$ вина~~
+	$\circ$ стыд~~
+	$\circ$ унижение~~
+	$\circ$ злоба~~
+	
+	Если это происходит, то я склонен мыслить жестко.
+	
+	\bigskip
+	$\diamond$ Потребность удовлетворена, когда все, кто мне нужен, признают мой высокий статус.
+	
+	Эмоции:
+	
+	$\circ$ счастье~~
+	$\circ$ удовлетворение~~
+	$\circ$ доверие~~
+	$\circ$ успокоение~~
+	
+	Если это происходит, то я склонен творить.
+	
+	\smallskip
+	\begin{itemize}
+		\item Считывайте информацию о статусе из рассказов собеседника.
+		\item Всегда и в любой ситуации будьте вежливы.
+		\item Признайте высокое положение человека везде, где он этого заслуживает.
+		\item Сообщайте о своем статусе.
+	\end{itemize}
+
+	\smallskip
+	\item Потребность в удовлетворенности ролью.
+	
+	\medskip
+	$\diamond$ Игнорируют, когда моя роль становится банальной и ограниченной.
+	
+	Эмоции:
+	
+	$\circ$ беспокойство~~
+	$\circ$ печаль~~
+	$\circ$ зависть~~
+	$\circ$ апатия~~
+	
+	Если это происходит, то я склонен обманывать, не стремиться заслужить доверие.
+	
+	\bigskip
+	$\diamond$ Потребность удовлетворена, когда моя роль меня удовлетворяет.
+	
+	Эмоции:
+	
+	$\circ$ радость~~
+	$\circ$ надежда~~
+	$\circ$ расслабленность~~
+	$\circ$ удвольствие~~
+	
+	Если это происходит, то я склонен быть искренним.
+	
+	\smallskip
+	\begin{itemize}
+		\item Определите свою эффективную роль во время переговоров.
+		\item Понимайте и уважайте роль другого человека.
+	\end{itemize}
+\end{enumerate}
+
+\subsection*{Эмоциональная подготовка к переговорам.}
+$\ast$ Рефрейминг -- переосмысление и перестройка механизмов восприятия, мышления и поведения с целью избавиться от неудачных психологических шаблонов.
+\begin{enumerate}
+	\item Готовьтесь к переговорам:
+	\begin{itemize}
+		\item Проанализируйте и вербализируйте свои эмоции.
+		\item Признавайте их законность и отнеситесь к себе с сочувствием.
+		\item Проведите рефрейминг, чтобы настроиться на сотрудничество.
+		\item Возьмите на себя ответственность за переговоры.
+		\item Подумайте о другом участнике переговоров: его эмоциях, потребностях, интересах.
+	\end{itemize}
+	\item Во время переговоров:
+	\begin{itemize}
+		\item Следите за <<эмоциональной температурой>>.
+		\item Делайте перерывы в моменты эмоционального закипания.
+		\item Успокаивайтесь с помощью глубокого дыхания и <<заземления>>.
+		\item Задавайте себе вопрос <<Какая потребность скрывается за этой эмоцией?>>.
+		\item Проявляйте понимание, а не обвинение.
+		\item Не реагируйте на агрессию ответным гневом.
+	\end{itemize}
+\end{enumerate}
 \end{document}
