--- a/Year-2/Theory-of-probabilities/config/config.tex
+++ b/Year-2/Theory-of-probabilities/config/config.tex
@@ -1,5 +1,7 @@
 \documentclass{article}
 
+% relative importing
+\usepackage{import}
 %----geometry--------------------------------------------------------------------------------------
 \usepackage{geometry}
 
