--- a/Year-2/Theory-of-probabilities/main.tex
+++ b/Year-2/Theory-of-probabilities/main.tex
@@ -13,7 +13,6 @@
 \begin{sloppypar}
 \tableofcontents
 \newpage
-\input{module-1/tasks.tex}
-
+\import{module-1}{tasks.tex}
 \end{sloppypar}
 \end{document}
